--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"axios": "^0.26.1",
 		"vue": "^2.6.11",
+		"vue-luxon": "^0.10.0",
 		"vue-router": "^3.2.0"
 	},
 	"devDependencies": {
