--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.26.1",
+		"bootstrap-vue": "^2.22.0",
 		"vue": "^2.6.11",
 		"vue-luxon": "^0.10.0",
 		"vue-router": "^3.2.0"
